# cc-buddy-

./: .gitignore  README.md  TODO.md  index.html  package-lock.json  package.json  vite.config.js
docs/: REQUIREMENTS.md
hooks/: cc-buddy-hook.py  hook-config.json
media/: SHOTLIST.md  generate_gifs.py
src/: devlog.js  main.js  playground.js  sound.js  sprite.js  style.css  usage.js  voice.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
